tests/baselines/reference/unusedParametersinConstructor2.errors.txt
tests/cases/compiler/unusedParametersinConstructor2.ts(3,17): error TS6134: Parameter 'param1' has never been used.


==== tests/cases/compiler/unusedParametersinConstructor2.ts (1 errors) ====
    
    class greeter {
        constructor(param1: string, param2: string) {
                    ~~~~~~~~~~~~~~
!!! error TS6134: Parameter 'param1' has never been used.
            param2 = param2 + "dummy value";
        }
    }